--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - .:/app
     command: ["./entrypoint.sh", "python", "manage.py", "runserver", "0.0.0.0:8000"]
 
+
   db:
     image: postgres:16
     environment:
@@ -21,4 +22,4 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data  # Monta un volumen local para la primera base de datos
+      - ./postgres_data:/var/lib/postgresql/data  
